k8s/nexus/templates/route-docker.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nexus
  name: docker
spec:
  host: docker.apps.openshift-1.blierop.com
  port:
    targetPort: 8082
  to:
    kind: ""
    name: nexus
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
